--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "@zappar/zappar-threejs": "^0.3.33",
     "three": "^0.126.1"
   }
